k8s/istiofeatures/mirroring/1-mirror-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: service-c-mirror
  namespace: servicemesh-apps
spec:
  parentRefs:
  - group: ""
    kind: Service
    name: service-c
    port: 8080
  rules:
  - filters:
    - type: RequestMirror
      requestMirror:
        backendRef:
          name: service-c-v2
          port: 8080
    backendRefs:
    - name: service-c-v1
      port: 8080
