k8s/istiofeatures/mirroring/1-vs.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: service-c
spec:
  hosts:
  - service-c
  http:
  - route:
    - destination:
        host: service-c
        subset: version-v1
      weight: 100
    mirror:
      host: service-c
      subset: version-v2
    mirrorPercentage:
      value: 100
